--- a/canva.html
+++ b/canva.html
@@ -233,10 +233,11 @@
       <div class="left">
         <a class="back" href="app-prem.html" aria-label="Kembali">←</a>
         <div class="titleBox">
-          <p class="title">Aplikasi Premium</p>
+          <p class="title">App Prem</p>
           <p class="sub">Canva</p>
         </div>
       </div>
+      <span class="pill" id="sortLabel">Termurah</span>
     </div>
   </header>
 
@@ -251,6 +252,7 @@
 
         <input id="q" class="search" placeholder="Cari produk... (contoh: member, owner, 1 bulan)" />
 
+        <button class="iconBtn" id="clear" title="Hapus pencarian" aria-label="Hapus pencarian">✕</button>
       </div>
 
       <div class="list" id="list"></div>
@@ -310,10 +312,24 @@
 
     const PRODUCTS = [
       {
+        id:"canva-owner-1b",
+        name:"Canva Owner 1 Bulan",
+        stock:0,
+        price:3500,
+        desc:"VIA INVITE LINK. 1x BELI = 1 CUST. GARANSI HANYA JIKA BF, DI LUAR ITU BUKAN TANGGUNG JAWAB ADMIN."
+      },
+      {
         id:"canva-member-1b",
         name:"Canva Member 1 Bulan",
         stock:371,
         price:5000,
+        desc:"VIA INVITE LINK. 1x BELI = 1 CUST. GARANSI HANYA JIKA BF, DI LUAR ITU BUKAN TANGGUNG JAWAB ADMIN."
+      },
+      {
+        id:"canva-owner-1t",
+        name:"Canva Owner 1 Tahun",
+        stock:12,
+        price:25000,
         desc:"VIA INVITE LINK. 1x BELI = 1 CUST. GARANSI HANYA JIKA BF, DI LUAR ITU BUKAN TANGGUNG JAWAB ADMIN."
       },
       {
