--- a/canva.html
+++ b/canva.html
@@ -233,11 +233,10 @@
       <div class="left">
         <a class="back" href="app-prem.html" aria-label="Kembali">←</a>
         <div class="titleBox">
-          <p class="title">App Prem</p>
+          <p class="title">Aplikasi Premium</p>
           <p class="sub">Canva</p>
         </div>
       </div>
-      <span class="pill" id="sortLabel">Termurah</span>
     </div>
   </header>
 
