Update13 canva.html

--- a/canva.html
+++ b/canva.html
@@ -237,6 +237,7 @@
           <p class="sub">Canva</p>
         </div>
       </div>
+      <span class="pill" id="sortLabel">Termurah</span>
     </div>
   </header>
 
@@ -311,31 +312,17 @@
 
     const PRODUCTS = [
       {
-        id:"canva-owner-1b",
-        name:"Canva Owner 1 Bulan",
-        stock:0,
-        price:3500,
-        desc:"VIA INVITE LINK. 1x BELI = 1 CUST. GARANSI HANYA JIKA BF, DI LUAR ITU BUKAN TANGGUNG JAWAB ADMIN."
-      },
-      {
         id:"canva-member-1b",
         name:"Canva Member 1 Bulan",
-        stock:371,
+        stock:999,
         price:5000,
-        desc:"VIA INVITE LINK. 1x BELI = 1 CUST. GARANSI HANYA JIKA BF, DI LUAR ITU BUKAN TANGGUNG JAWAB ADMIN."
-      },
-      {
-        id:"canva-owner-1t",
-        name:"Canva Owner 1 Tahun",
-        stock:12,
-        price:25000,
         desc:"VIA INVITE LINK. 1x BELI = 1 CUST. GARANSI HANYA JIKA BF, DI LUAR ITU BUKAN TANGGUNG JAWAB ADMIN."
       },
       {
         id:"canva-member-1t",
         name:"Canva Member 1 Tahun",
-        stock:378,
-        price:28000,
+        stock:999,
+        price:24000,
         desc:"VIA INVITE LINK. 1x BELI = 1 CUST. GARANSI HANYA JIKA BF, DI LUAR ITU BUKAN TANGGUNG JAWAB ADMIN."
       },
     ];
