--- a/qris.html
+++ b/qris.html
@@ -199,8 +199,10 @@ const QRIS_IMG = "qris.png";
 
 // Contoh kode ACC (kamu tambahkan manual setiap ada order)
 const approvedCodes = {
-  "ES-10001": {
-    text: "Canva Member 1 Bulan\n\nLink Invite:\nhttps://contoh-link.com\n\nJangan dibagikan ke orang lain."
+  "ES-83921": { text: "Contoh produk..." },
+
+  "ES-1001": { 
+    text: "LINK INVITE CANVA:\nhttps://invite-link-kamu.com\n\nBerlaku 1 bulan." 
   }
 };
 
